Bug 61166 - EDITING: Values in correlated subquery were not shown in queries.
Summary: EDITING: Values in correlated subquery were not shown in queries.
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
4.0.0.3 release
Hardware: x86 (IA32) Linux (All)
: high normal
Assignee: Lionel Elie Mamane
URL:
Whiteboard: target:4.1.0 target:4.0.2
Keywords: regression
Depends on:
Blocks: 60504
  Show dependency treegraph
 
Reported: 2013-02-20 13:19 UTC by Robert Großkopf
Modified: 2019-12-04 07:37 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Robert Großkopf 2013-02-20 13:19:16 UTC
Open The attachment
https://bugs.freedesktop.org/attachment.cgi?id=71964
Open one of the queries. Up to LO 3.6.5.2 there were values shown for "Balance". In LO 4.0.0.3 these fields appear all empty. This query works with a correlating subquery for "Balance".
Comment 1 Dan Lewis 2013-02-21 18:11:34 UTC
     Long story: I opened this database with LO 4.0.0.3. Then I opened either query in SQL view. After looking at the SQL I wondered what it would look like in Design view, so I clicked Design View On/Off icon. But when I clicked this again to return to SQL View, I got an error message "SQL syntax error".
     When I ran the query, the Balance column was empty.
     Later I closed the query and reopened it in SQL view. Then I clicked the icon labeled "run SQL command directly". Then when I ran the query, the Balance column had the values that it should have.
Comment 2 Alex Thurgood 2013-02-21 18:32:36 UTC
Confirming on Linux 32 bit master :
Version 4.1.0.0.alpha0+ (Build ID: 779f6188d9ee2f3db2514ea6db72663d35a064c)


Alex
Comment 3 Alex Thurgood 2013-02-21 18:33:05 UTC
Adding Lionel to CC
Comment 4 Lionel Elie Mamane 2013-03-06 16:49:45 UTC
Work-around: set a numeric format on that column instead of text format.

This is caused by a copy-paste/error in the handling of numeric values by a text format. (Not sure why this column was getting text format instead of numeric format.)
Comment 5 Commit Notification 2013-03-06 17:00:29 UTC
Lionel Elie Mamane committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=966ab5cd805d403f1dec73bb1a452b9ed38348d5

fdo#61166 text format: correctly chain the formatter->getOutputString calls



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2013-03-06 18:11:55 UTC
Lionel Elie Mamane committed a patch related to this issue.
It has been pushed to "libreoffice-4-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=8a203e4996979fd9be3eba835fb84dd005ac3f69&h=libreoffice-4-0

fdo#61166 text format: correctly chain the formatter->getOutputString calls


It will be available in LibreOffice 4.0.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Robert Großkopf 2013-03-15 15:09:52 UTC
Have downloaded LO 4.0.2.1 rc . Well done, Lionel. All values in subqueries were shown.

Robert