fdo#61166 text format: correctly chain the formatter->getOutputString calls

cf commit 271b11a3d56ba0c5f542a142ab859a0819530dba, copy/paste error

Change-Id: I9a5391cd9d77d181026abffa3ea2f036c7009ade